Require pot destinations for transfers
